--- a/src/main/resources/templates/friends_record.html
+++ b/src/main/resources/templates/friends_record.html
@@ -40,7 +40,7 @@
           <div class="menu">
             <a href="#" th:href="@{/about}" class="item">我的</a>
             <a href="#" th:href="@{/edit/password}" class="item">修改密码</a>
-            <a href="#" th:href="@{/login/exit}" class="item">退出</a>
+            <a href="#" th:href="@{/login/exit}" id="logout-link" class="item">退出</a>
             <a href="#" th:href="@{/login/delete}" class="item">注销</a> <!--得更新-->
           </div>
           <input type="hidden" name="concurrentUsername" th:value="${session.user?.username}"/>
@@ -73,10 +73,10 @@
 <div class="m-margin- animated animate__fadeIn" id="app">
   <div class="ui m-opacity container">
     <div class="box-shadow-max">
-      <div class="" style="font-size: 35px;font-weight: bold" align="center">
-        好友：{{toName}}
-        <span style="font-size: 28px; font-weight: lighter" v-if="isOnline">(在线)</span>
-        <span style="font-size: 28px; font-weight: lighter" v-else>(离线)</span>
+      <div class="" style="font-size: 35px;font-weight: bold" align="center" v-if="isShowChat">
+        好友：<a href="#">{{toNickname}}</a>
+        <!--<span style="font-size: 28px; font-weight: lighter" v-if="isOnline">(在线)</span>
+        <span style="font-size: 28px; font-weight: lighter" v-else>(离线)</span>-->
       </div>
       <div class="ui m-container-mm segment m-padded-tb-large m-opacity"
            style="position: relative; height: 56em !important; overflow-y: scroll;">
@@ -87,23 +87,33 @@
             <!-- 我的消息 -->
             <div class="item right aligned reply" v-if="message.toName">
               <div class="content">
-                <img class="ui circular image avatar me" src="../static/images/friend_record_3.jpg" alt="My Avatar">
+                <img class="ui circular image avatar me" src="../static/images/friend_record_3.jpg"
+                     th:src="@{${session.user?.avatar}}" alt="My Avatar"
+                     style="object-fit: cover;
+                       cursor: pointer;
+                       outline: 0px;
+                       background-size: 100% 100%;">
                 <div class="bubble me">
-                  <p>{{message.message}}</p>
+                  <p style="font-weight: bold">{{message.message}}</p>
                   <div class="meta">
-                    <span class="date">今天 10:00</span>
+                    <span class="date">{{message.sendTime}}</span>
                   </div>
                 </div>
               </div>
             </div>
             <!--对面消息-->
             <div class="item left aligned" v-else>
-              <img class="ui circular image avatar ta" src="../static/images/friend_record_1.jpg" alt="Kafka's Avatar">
+              <img class="ui circular image avatar ta" src="../static/images/friend_record_1.jpg" :src="toAvatar"
+                   alt="Kafka's Avatar"
+                   style="object-fit: cover;
+                     cursor: pointer;
+                     outline: 0px;
+                     background-size: 100% 100%;">
               <div class="content">
                 <div class="bubble ta">
-                  <p>{{message.message}}</p>
+                  <p style="font-weight: bold">{{message.message}}</p>
                   <div class="meta">
-                    <span>昨天 20:30</span>
+                    <span>{{message.sendTime}}</span>
                   </div>
                 </div>
               </div>
@@ -136,9 +146,8 @@
           </div>
         </div>
 
-
         <!-- 输入与发送消息区域 -->
-        <div class="ui form message-input-area">
+        <div class="ui form message-input-area" v-if="chatMes">
           <div class="field">
             <textarea rows="2" placeholder="在此输入您的消息..." @keyup.enter="submit" wrap="hard"
                       v-model="sendMessage.message"></textarea>
@@ -148,7 +157,9 @@
             发送
           </div>
         </div>
-
+        <div class="ui form message-input-area" v-else>
+          <h5 style="color: #e74000; font-weight: lighter">请先选择聊天好友</h5>
+        </div>
       </div>
     </div>
 
@@ -157,15 +168,19 @@
       <div class="ui top attached teal m-opacityFriendImg segment box-shadow-max">
         <div class="ui m-padded-tb-large m-container-mm">
           <div class="ui stackable m-container-mini m-opacityFriendImg grid">
-            <!--友人帐显示区域-->
-            <div class="m-margin-tb-tiny four wide column" v-for="friend in friendsList">
-              <a href="#" class="class_outer" @click='showChat(friend)'>
+            <!--最近记录显示区域-->
+            <div class="m-margin-tb-tiny four wide column" v-for="friend in friendList">
+              <a href="#" class="class_outer" @click='showChat(friend.usernameTa, friend.avatarTa, friend.nicknameTa)'>
                 <div align="center">
                   <div class="friends-link">
-                    <img src="../static/images/friend_record_1.jpg" alt=""
+                    <img src="../static/images/friend_record_1.jpg" :src="friend.avatarTa" alt=""
                          class="friends-link-image" style="opacity: 1">
                     <div class="m-margin-top">
-                      <h4 class="m-font-size-text-friends m-margin-tb-tiny">{{friend}}</h4>
+                      <h4 class="m-font-size-text-friends m-margin-tb-tiny">
+                        {{friend.nicknameTa}}:&nbsp;
+                        <span v-if="friend.chat.content.length > 5">{{friend.chat.content.slice(0, 5)}}...</span>
+                        <span v-else>{{friend.chat.content}}</span>
+                      </h4>
                     </div>
                   </div>
                 </div>
@@ -180,6 +195,7 @@
                          class="friends-link-image" style="opacity: 1">
                     <div class="m-margin-top">
                       <h4 class="m-font-size-text-friends m-margin-tb-tiny" th:text="${friendlink.blogname}">断背山</h4>
+                      <span>(*´▽｀)ノノ</span>
                     </div>
                   </div>
                 </div>
@@ -219,27 +235,40 @@
         el: "#app",
         data() {
             return {
-                // isShowChat: false,
+                isShowChat: false,
                 chatMes: false,
                 isOnline: true,
                 username: cUsername,
                 toName: "",
-                toId: "",
-                sendMessage: { // fromName、fromId和sendTime在服务端获取
+                toNickname: "",
+                toAvatar: "",
+                sendMessage: { // fromName、sendTime等在服务端获取
                     toName: "",
-                    toId: "",
-                    message: ""
+                    message: "",
+                    sendTime: null
                 },
                 inputMessage: "",
                 historyMessage: [
-                    /*{toName: "李四", message: "你好,张三"},
-                    {toName: "李四", message: "在吗"},
-                    {toName: "李四", message: "怎么不说话"},
-                    {fromName: "张三", message: "你好,李四"}*/
+                    /*{toName: "李四", message: "你好,张三", sendTime: ""},
+                    {toName: "李四", message: "在吗", sendTime: ""},
+                    {toName: "李四", message: "怎么不说话", sendTime: ""}, // 我发的
+                    {fromName: "张三", message: "你好,李四", sendTime: ""} // 对面发的*/
                 ],
-                friendsList: [
-                    /* "李四",
-                     "王五"*/
+                friendList: [ // 需要存(用户名、用户别名、头像地址、聊天记录)
+                    {
+                        usernameTa: "",
+                        avatarTa: "",
+                        nicknameTa: "",
+                        chat: {
+                            id: 1,
+                            sendTime: "",
+                            senderUsername: "",
+                            recipientUsername: "",
+                            content: "",
+                            type: false,
+                            isRead: true
+                        }
+                    }
                 ],
                 systemMessages: [
                     /*"张三",
@@ -250,51 +279,98 @@
         created() {
             this.init();
         },
+        /*mounted() {
+            this.fetchFriendList();
+        },*/
         methods: {
             async init() {
-                // 拿到当前登录用户的用户名
-                /*await axios.get("user/getUsername").then(res => {
-                    this.username = res.data;
-                });*/
+                await this.fetchFriendList();
 
-                // 创建webSocket对象
+                // 创建webSocket对象(这里要加上dev)
                 ws = new WebSocket("ws://localhost:8080/dev/chat");
 
                 // 给ws绑定事件
                 ws.onopen = this.onopen;
+
                 // 接收到服务端推送的消息后触发
                 ws.onmessage = this.onMessage;
 
                 ws.onclose = this.onClose;
             },
-            showChat(friendName) {
+            showChat(friendName, friendAvatar, friendNickname) { // 触发showChat时向后端发起请求, 将返回结果按需存入sessionStorage(请求当前登录用户和friendName的聊天记录)
                 this.toName = friendName;
-                // 清除聊天区的数据
+                this.toAvatar = friendAvatar;
+                this.toNickname = friendNickname;
+
+                // 根据toName获取聊天历史记录(sessionStorage以键值对存储数据于浏览器)
                 let history = sessionStorage.getItem(this.toName);
                 if (!history) {
-                    this.historyMessage = [];
+                    axios.get("record/" + this.toName).then(res => {
+                        this.historyMessage = res.data;
+                    });
                 } else {
+                    // 将Json字符串转为JavaScript对象
                     this.historyMessage = JSON.parse(history);
                 }
+                // 输入置空
+                this.sendMessage.message = "";
                 // 展示聊天对话框
-                // this.isShowChat = true;
-                // 显示“正在和谁聊天”
+                this.isShowChat = true;
+                // 显示“消息发送区域”
                 this.chatMes = true;
             },
-            submit() {
+            submit() { // 触发submit时，在后台将sendMessage存入List集合，根据一定策略存入数据库(算了，简单点吧)
+                if (this.sendMessage.message == "" || this.sendMessage.message == "\n") {
+                    this.sendMessage.message = "";
+                    alert("消息不能为空哦~");
+                    return;
+                }
+                if (this.toName == "") {
+                    alert("请先选择发送对象哦~");
+                    return;
+                }
+
                 this.sendMessage.toName = this.toName;
-                // stringify将对象转为Json字符串格式
-                this.historyMessage.push(JSON.parse(JSON.stringify(this.sendMessage)));
+                // 发送前先格式化时间
+                var formattedTime = new Intl.DateTimeFormat('zh-CN', {
+                    month: '2-digit',
+                    day: '2-digit',
+                    hour: '2-digit',
+                    minute: '2-digit'
+                }).format(new Date());
+                this.sendMessage.sendTime = formattedTime;
+
+                // stringify将JavaScript对象转为Json字符串格式
+                this.historyMessage.push(JSON.parse(JSON.stringify(this.sendMessage))); // push之后会自动重新渲染聊天界面
                 sessionStorage.setItem(this.toName, JSON.stringify(this.historyMessage));
-                // 发送消息(发送到服务端，服务到再传回客户端，客户端回调onMessage)
+                // 发送时就是Date对象
+                this.sendMessage.sendTime = new Date();
+                // 发送消息
                 ws.send(JSON.stringify(this.sendMessage));
+                // 更新friendList(这里是发送者)
+                this.updateFriendList(this.toName, this.sendMessage.message);
                 // 发完置空
                 this.sendMessage.message = "";
+            },
+            fetchFriendList() {
+                // 拿到当前登录用户的最近记录列表
+                axios.get("record").then(res => {
+                    this.friendList = res.data;
+                    this.$nextTick(() => {
+                        // 视图现在应该已经更新了
+                    });
+                });
+            },
+            updateFriendList(username, message) {
+                let index = this.friendList.findIndex(friend => friend.usernameTa === username);
+                this.$set(this.friendList[index].chat, 'content', message);
+                let newFriend = this.friendList.splice(index, 1)[0]; // 移除并获取下标为index的元素
+                // 将该元素插入到数组的第一个位置
+                this.friendList.unshift(newFriend);
             },
             // 连接成功建立的回调方法
             onOpen() {
                 console.log("进入open");
-                this.username = '${sessionScope.user.username}';
                 this.isOnline = true;
             },
             // 连接关闭的回调方法
@@ -303,29 +379,41 @@
                 sessionStorage.clear(); // 退出就置空，下次从数据库读出来
                 this.isOnline = false;
             },
-            // 接收到消息的回调方法
+            // 接收到消息的回调方法(ps：要接收方登录在线才会回调, 并且也是对方客户端回调)
             onMessage(evt) {
                 // 获取服务端推送过来的消息
                 var dataStr = evt.data;
-                // 将dataStr 转换为json对象
+                // 将dataStr转换为Json对象(即JavaScript中的Json对象)
                 var res = JSON.parse(dataStr);
-                console.log(res);
+                console.log(res); // 时间会变成时间戳
+
+                // 更新friendList(这里是接收者)
+                this.updateFriendList(res.fromName, res.message);
 
                 // 判断是否是系统消息
                 if (res.system) {
-                    // 系统消息  好友列表展示
-                    var names = res.message;
-                    this.friendsList = [];
+                    // 系统消息  好友列表展示(暂时用不到)
+                    /*var names = res.message;
+                    this.friendList = [];
                     this.systemMessages = [];
                     console.log("当前对象：" + this.username);
                     for (let i = 0; i < names.length; i++) {
                         if (names[i] != this.username) {
-                            this.friendsList.push(names[i]);
+                            this.friendList.push(names[i]);
                             this.systemMessages.push(names[i]);
                         }
-                    }
-                } else {
-                    // 非系统消息
+                    }*/
+                } else { // 非系统消息
+                    // 将时间戳转化为"MM-dd HH:mm"格式
+                    var date = new Date(res.sendTime);
+                    var formattedTime = new Intl.DateTimeFormat('zh-CN', {
+                        month: '2-digit',
+                        day: '2-digit',
+                        hour: '2-digit',
+                        minute: '2-digit'
+                    }).format(date);
+                    res.sendTime = formattedTime;
+
                     var history = sessionStorage.getItem(res.fromName);
                     if (!history) {
                         this.historyMessage = [res];
@@ -336,6 +424,12 @@
                 }
             }
         }
+    });
+
+    // 绑定退出按钮的点击事件
+    $('#logout-link').on('click', function (event) {
+        // 清除 sessionStorage
+        window.sessionStorage.clear();
     });
 
 </script>
