--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -52,7 +52,8 @@
   </a>
 </nav>
 
-<div class="ui m-container-plus m-margin-top-large animate__fadeIn" style="padding-bottom: 2em !important; margin-top: 5em !important;">
+<div class="ui m-container-plus m-margin-top-large animate__fadeIn"
+     style="padding-bottom: 2em !important; margin-top: 5em !important;">
   <div class="ui stackable grid">
     <div class="eleven wide column">
       <div class="ui container transparent-segment segment m-margin-buttom-large">
@@ -104,7 +105,8 @@
             <div class="content">
               <a class="header">Veronika Ossi</a>
               <div class="description">
-                <p>Veronika Ossi is a set designer living in New York who <a>enjoys</a> kittens, music, and partying.</p>
+                <p>Veronika Ossi is a set designer living in New York who <a>enjoys</a> kittens, music, and partying.
+                </p>
               </div>
             </div>
           </div>
@@ -142,6 +144,44 @@
       </div>
     </div>
     <div class="five wide column">
+      <!--申请列表-->
+      <div class="ui container transparent-segment segment">
+        <div class="ui relaxed list">
+          <div class="item">
+            <img class="ui avatar image" src="../static/images/avatar/joe.jpg">
+            <div class="content" style="padding: 6px">
+              <a class="header">丹尼尔 路易斯</a>
+            </div>
+            <button class="ui basic mini right floated button" style="font-weight: bold!important;" id="agreeApply">
+              <i class="icon user"></i>
+              同意
+            </button>
+          </div>
+          <!--/*-->
+          <div class="item">
+            <img class="ui avatar image" src="../static/images/avatar/joe.jpg">
+            <div class="content" style="padding: 6px">
+              <a class="header">Stevie Feliciano</a>
+            </div>
+            <button class="ui basic mini right floated button" style="font-weight: bold!important;">
+              <i class="icon user"></i>
+              同意
+            </button>
+          </div>
+          <div class="item">
+            <img class="ui avatar image" src="../static/images/avatar/joe.jpg">
+            <div class="content" style="padding: 6px">
+              <a class="header">Elliot Fu</a>
+            </div>
+            <button class="ui basic mini right floated button" style="font-weight: bold!important;">
+              <i class="icon user"></i>
+              同意
+            </button>
+          </div>
+          <!--*/-->
+        </div>
+      </div>
+      <!--足迹展示-->
       <div class="ui container transparent-segment segment">
         <div class="ui relaxed list">
           <div class="item">
@@ -300,9 +340,11 @@
     删除好友
   </div>
   <div class="ui large aligned divided list" style="margin: 0px">
-    <div class="item centering example" style="padding: 12px">
+    <div class="item centering example" style="padding: 10px">
       <div class="right floated content">
-        <div class="ui icon button">查看主页</div>
+        <a href="http://www.baidu.com" target="_blank">
+          <div class="ui icon button">查看主页</div>
+        </a>
         <div class="ui yellow icon button">删除Ta</div>
       </div>
       <img class="ui avatar image" src="../static/images/avatar/justen.jpg">
