--- a/src/main/resources/templates/picture.html
+++ b/src/main/resources/templates/picture.html
@@ -286,11 +286,11 @@
 <div class="ui tiny modal">
   <i class="close icon"></i>
   <div class="header">
-    评论删除
+    图片删除
   </div>
   <div class="content">
     <div class="description" name="descriptionDel">
-      确定要删除该评论嘛？所有回复也都会被删除哦~
+      确定要删除该图片嘛？仔细想想看哦~ 或许它记录着你某个瞬间？
     </div>
   </div>
   <div class="actions">
