--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -49,7 +49,7 @@
           </div>
           <i class="dropdown icon"></i>
           <div class="menu">
-            <a href="#" th:href="@{/about}" class="item">我的</a>
+            <a href="#" th:href="@{/about}" target="_blank" class="item">我的</a>
             <a href="#" th:href="@{/edit/password}" class="item">修改密码</a>
             <a href="#" th:href="@{/login/exit}" class="item">退出</a>
             <a href="#" th:href="@{/login/delete}" class="item">注销</a> <!--得更新-->
@@ -104,7 +104,7 @@
 
         <!-- 好友列表 -->
         <div class="ui items">
-          <div class="item" v-for="friend in friendList" style="max-height: 80px">
+          <div class="item" v-for="friend in filteredFriends" style="max-height: 80px">
             <a class="ui tiny image" :href="'/dev/userOtherAbout/' + friend.userId" target="_blank">
               <img :src="friend.avatar"
                    style="object-fit: cover;
@@ -122,18 +122,56 @@
                 <p v-if="friend.description.length > 80">{{friend.description.slice(0, 80)}}...</p>
                 <p v-else>{{friend.description}}</p>
               </div>
-              <div class="ui basic mini right floated button"
-                   style="font-weight: bold!important; margin-top: 5px!important;">
-                <i class="wechat icon"></i>
-                聊天
-              </div>
-              <div class="ui basic mini right floated button"
-                   style="font-weight: bold!important; margin-top: 5px!important;">
-                <i class="mouse pointer icon"></i>
-                主页
-              </div>
+              <a class="header" :href="'/dev/chat/' + friend.userId" target="_blank" style="float: right;">
+                <div class="ui basic mini right floated button"
+                     style="font-weight: bold!important; margin-top: 5px!important;">
+                  <i class="wechat icon"></i>
+                  聊天
+                </div>
+              </a>
+              <a class="header" :href="'/dev/userOtherAbout/' + friend.userId" target="_blank" style="float: right;">
+                <div class="ui basic mini right floated button"
+                     style="font-weight: bold!important; margin-top: 5px!important;">
+                  <i class="mouse pointer icon"></i>
+                  主页
+                </div>
+              </a>
             </div>
           </div>
+          <!--<div class="item" v-for="myF in filteredFriends" style="max-height: 80px">
+            <a class="ui tiny image" :href="'/dev/userOtherAbout/' + myF.userId" target="_blank">
+              <img :src="myF.avatar"
+                   style="object-fit: cover;
+                       cursor: pointer;
+                       outline: 0px;
+                       max-height: 80px;
+                       height: 80px;
+                       background-size: 100% 100%;">
+            </a>
+            <div class="content">
+              <a class="header" :href="'/dev/userOtherAbout/' + myF.userId" target="_blank">{{myF.nickname}}</a>
+              <div class="description">
+                &lt;!&ndash;<p>Stevie Feliciano is a <a>library scientist</a> living in New York City. She likes to spend her time
+                  reading, running, and writing.</p>&ndash;&gt;
+                <p v-if="myF.description.length > 80">{{myF.description.slice(0, 80)}}...</p>
+                <p v-else>{{myF.description}}</p>
+              </div>
+              <a class="header" :href="'/dev/chat/' + myF.userId" target="_blank" style="float: right;">
+                <div class="ui basic mini right floated button"
+                     style="font-weight: bold!important; margin-top: 5px!important;">
+                  <i class="wechat icon"></i>
+                  聊天
+                </div>
+              </a>
+              <a class="header" :href="'/dev/userOtherAbout/' + myF.userId" target="_blank" style="float: right;">
+                <div class="ui basic mini right floated button"
+                     style="font-weight: bold!important; margin-top: 5px!important;">
+                  <i class="mouse pointer icon"></i>
+                  主页
+                </div>
+              </a>
+            </div>
+          </div>-->
           <!--/*-->
           <div class="item">
             <a class="ui tiny image">
@@ -147,37 +185,13 @@
               </div>
             </div>
           </div>
-          <div class="item">
-            <a class="ui tiny image">
-              <img src="../static/images/avatar/justen.jpg">
-            </a>
-            <div class="content">
-              <a class="header">Jenny Hess</a>
-              <div class="description">
-                <p>Jenny is a student studying Media Management at <a>the New School</a>.</p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <a class="ui tiny image">
-              <img src="../static/images/avatar/jenny.jpg">
-            </a>
-            <div class="content">
-              <a class="header">Stevie Feliciano</a>
-              <div class="description">
-                <p>Stevie Feliciano is a <a>library scientist</a> living in New York City. She likes to spend her time
-                  reading, running, and writing.</p>
-              </div>
-            </div>
-          </div>
           <!--*/-->
         </div>
         <div class="ui search m-top-right" style="margin-right: 15px; margin-top: 10px">
           <div class="ui icon input">
-            <input class="prompt" type="text" placeholder="搜索我的好友...">
+            <input class="prompt" type="text" v-model="searchMyFriends" placeholder="搜索我的好友...">
             <i class="search icon"></i>
           </div>
-          <div class="results"></div>
         </div>
       </div>
     </div>
@@ -191,16 +205,19 @@
                        cursor: pointer;
                        outline: 0px;
                        background-size: 100% 100%;">
-            <div class="content" style="padding: 6px">
-              <a class="header" :href="'/dev/userOtherAbout/' + apply.senderId"
-                 target="_blank">{{apply.senderNickname}}</a>
+            <div class="content" style="padding: 5px">
+              <a class="header" :href="'/dev/userOtherAbout/' + apply.senderId" target="_blank">
+                <p v-if="apply.senderNickname.length > 12">{{apply.senderNickname.slice(0, 12)}}...</p>
+                <p v-else>{{apply.senderNickname}}</p>
+              </a>
             </div>
             <button class="ui basic mini right floated button" style="font-weight: bold; margin: 0em;"
                     @click="agreeApply(apply)">
               <i class="icon thumbs up"></i>
               同意
             </button>
-            <button class="ui basic mini right floated button" style="font-weight: bold; margin-right: 0.2em"
+            <button class="ui basic mini right floated button"
+                    style="font-weight: bold; margin-right: 0.2em; margin-left: 0;"
                     @click="rejectApply(apply.id)">
               <i class="icon thumbs down"></i>
               拒绝
@@ -210,17 +227,7 @@
           <div class="item">
             <img class="ui avatar image" src="../static/images/avatar/joe.jpg">
             <div class="content" style="padding: 6px">
-              <a class="header">Stevie Feliciano</a>
-            </div>
-            <button class="ui basic mini right floated button" style="font-weight: bold!important;">
-              <i class="icon user"></i>
-              同意
-            </button>
-          </div>
-          <div class="item">
-            <img class="ui avatar image" src="../static/images/avatar/joe.jpg">
-            <div class="content" style="padding: 6px">
-              <a class="header">Elliot Fu</a>
+              <a class="header"><p>Feliciano</p></a>
             </div>
             <button class="ui basic mini right floated button" style="font-weight: bold!important;">
               <i class="icon user"></i>
@@ -251,7 +258,9 @@
             <img class="ui avatar image" src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/joe.jpg">
             <div class="content">
               <a class="header">Elliot Fu</a>
-              <div class="description">一直以来访问你的 <a><b>主页</b></a> 最多。</div>
+              <div class="description">一直以来访问你的
+                <a :href="'/dev/about'" target="_blank"><b>主页</b></a> 最多。
+              </div>
             </div>
           </div>
         </div>
@@ -287,9 +296,11 @@
           查看主页
         </div>
       </a>
-      <div class="ui positive right icon button">
-        找Ta聊天
-      </div>
+      <a :href="'/dev/chat/' + friendHottest.userId" target="_blank">
+        <div class="ui positive right icon button">
+          找Ta聊天
+        </div>
+      </a>
     </div>
   </div>
 
@@ -305,7 +316,9 @@
           <a :href="'/dev/userOtherAbout/' + friend.userId" target="_blank">
             <div class="ui icon button">查看主页</div>
           </a>
-          <div class="ui blue icon button">找Ta聊天</div>
+          <a :href="'/dev/chat/' + friendHottest.userId" target="_blank">
+            <div class="ui blue icon button">找Ta聊天</div>
+          </a>
         </div>
         <img class="ui avatar image example tip" :src="friend.avatar"
              style="object-fit: cover;
@@ -399,7 +412,10 @@
                 已添加
               </div>
               <div class="ui primary button" @click="doAdd(friend)" v-else>添加</div>
-              <a :href="'/dev/userOtherAbout/' + friend.userId" target="_blank">
+              <a :href="'/dev/about'" target="_blank" v-if="friend.me == true">
+                <div class="ui button">主页</div>
+              </a>
+              <a :href="'/dev/userOtherAbout/' + friend.userId" target="_blank" v-else>
                 <div class="ui button">主页</div>
               </a>
             </div>
@@ -482,47 +498,6 @@
         on: 'hover'
     });
 
-    /*$('#hottest').click(() => {
-        $('.ui.hottest.modal').modal('show');
-    })
-
-    $('#chatOften').click(() => {
-        $('.ui.chatOften.modal').modal('show');
-    })
-
-    $('#addFriend').on('click', function () {
-        $('.ui.addFriend.modal').modal('show');
-    })
-
-    $('#deleteFriend').on('click', function () {
-        $('.ui.deleteFriend.modal').modal('show');
-    })*/
-
-    // 静态数据(测试)
-    const staticData = [
-        {
-            image: '../static/images/avatar/joe.jpg',
-            title: 'Card Title 1',
-            description: 'This is a short description for the first card.'
-        },
-        {
-            image: '../static/images/avatar/joe.jpg',
-            title: 'Card Title 2',
-            description: 'This is a short description for the second card.'
-        },
-        {
-            image: '../static/images/avatar/joe.jpg',
-            title: 'Card Title 3',
-            description: 'This is a short description for the three card.'
-        },
-        {
-            image: '../static/images/avatar/joe.jpg',
-            title: 'Card Title 4',
-            description: 'This is a short description for the three card.'
-        }
-        // 更多卡片数据...
-    ];
-
     const cId = $("[name='concurrentId']").val();
     const cUsername = $("[name='concurrentUsername']").val();
     const cAvatar = $("[name='concurrentAvatar']").val();
@@ -552,13 +527,24 @@
                     nickname: ""
                 },
                 friendListOften: [],
-                friendList: [],
-                applyList: [{}],
+                friendList: [], // 原始好友列表
+                filteredFriends: [], // 过滤后的可见好友列表
+                applyList: [],
+                searchMyFriends: ''
             }
         },
         created() { // new这个Vue对象时会自动执行
             this.init();
+            // console.log(this.filteredFriends); // 这个会被先执行(先于this.getFriendList()，原因未知...)
             console.log("初始化Vue.");
+        },
+        watch: {
+            // 监听搜索输入
+            searchMyFriends(newVal) {
+                this.filteredFriends = this.friendList.filter(friend => {
+                    return friend.nickname.toLowerCase().includes(newVal.toLowerCase());
+                });
+            },
         },
         methods: {
             // 初始化方法
@@ -572,6 +558,7 @@
             async getFriendList() {
                 await axios.get("list").then(res => {
                     this.friendList = res.data;
+                    this.filteredFriends = this.friendList;
                 });
             },
             // 最热好友
@@ -580,16 +567,17 @@
                     this.friendHottest = res.data;
                 });
             },
+            // 展示最热模态框
             showHottest() {
                 $('.ui.hottest.modal').modal('show');
             },
-            // 常聊好友
             /*chatOften: () => { // 写法二(匿名回调函数写法，第一次请求得到的数据无法传给friendListOften，这种写法不行)
                 $('.ui.chatOften.modal').modal('show');
                 axios.get("often").then(res => {
                     this.friendListOften = res.data;
                 });
             },*/
+            // 常聊好友
             async chatOften() {
                 await axios.get("often").then(res => {
                     this.friendListOften = res.data;
