收藏功能(未完待续)

--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -652,8 +652,9 @@
                     });
                 });
 
+                // 点击confirmDel按钮才执行try
+                await confirmed;
                 try {
-                    await confirmed;
                     await axios.delete("delete/" + id);
                     await this.getFriendList();
                     await this.getFriendsNumber();
