--- a/src/main/resources/templates/_fragments_login.html
+++ b/src/main/resources/templates/_fragments_login.html
@@ -49,6 +49,7 @@
               <a href="#" th:href="@{/login/delete}" class="item">注销</a> <!--得更新-->
             </div>
           </div>
+          <input type="hidden" name="concurrentId" th:value="${session.user?.id}"/>
         </div>
       </div>
     </div>
