--- a/src/main/resources/templates/fblog-input.html
+++ b/src/main/resources/templates/fblog-input.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="_fragments_login :: head(~{::title})">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<title>发布帖子</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <title>发布帖子</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link href="../static/css/app.css" rel="stylesheet">
   <link href="../static/css/style.min.css" rel="stylesheet">
   <link href="../static/css/me.css" rel="stylesheet">
 </head>
-  
+
 <body>
-<nav th:replace="_fragments_login :: menu()" class="ui inverted attached segment m-padded-tb-mini">
+<nav th:replace="_fragments_login :: menu(0)" class="ui inverted attached segment m-padded-tb-mini">
   <div class="ui container"> <!-- 加一个容器 -->
     <div class="ui inverted secondary stackable menu"> <!-- 菜单 stackable:可堆叠的,表示屏幕小时自动堆叠-->
       <h2 class="ui white header item">GuideSystem</h2> <!-- 蓝绿色标题 -->
@@ -47,86 +47,94 @@
 <div class="m-container m-padded-tb-big" id="contentDiv">
   <div class="ui container">
     <!--页面主要内容-->
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="card">
-              <div class="card-body">
-                <form action="#" th:action="@{/fblog/input/success}" method="post" class="row">
-                  <div class="form-group col-md-12">
-                    <label for="type" class="ui header m-text-header-thin">发布社区</label>
-                    <div class="form-controls">
-                      <select name="forum.id" class="form-control" id="type">
-                        <option value="0"></option>
-                        <option value="GuideSystem学习" th:value="${forum.id}" th:each="forum : ${forums}" th:text="${forum.forumName}">GuideSystem学习</option>
-                        <!--/*-->
-                        <option value="活动专区">活动专区</option>
-                        <option value="公开课专区">公开课专区</option>
-                        <option value="讨论专区">讨论专区</option>
-                        <option value="升学指南">升学指南</option>
-                        <option value="高校俱乐部">高校俱乐部</option>
-                        <option value="专业问答">专业问答</option>
-                        <option value="奇思妙想">奇思妙想</option>
-                        <!--*/-->
-                      </select>
-                    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="card">
+            <div class="card-body">
+              <form action="#" th:action="@{/fblog/input/success}" method="post" class="row">
+                <div class="form-group col-md-12">
+                  <label for="type" class="ui header m-text-header-thin">发布社区</label>
+                  <div class="form-controls">
+                    <select name="forum.id" class="form-control" id="type">
+                      <option value="0"></option>
+                      <option value="GuideSystem学习" th:value="${forum.id}" th:each="forum : ${forums}"
+                              th:text="${forum.forumName}">GuideSystem学习
+                      </option>
+                      <!--/*-->
+                      <option value="活动专区">活动专区</option>
+                      <option value="公开课专区">公开课专区</option>
+                      <option value="讨论专区">讨论专区</option>
+                      <option value="升学指南">升学指南</option>
+                      <option value="高校俱乐部">高校俱乐部</option>
+                      <option value="专业问答">专业问答</option>
+                      <option value="奇思妙想">奇思妙想</option>
+                      <!--*/-->
+                    </select>
                   </div>
-                  <div class="form-group col-md-12">
-                    <label for="title" class="ui header m-text-header-thin">标题</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="请输入标题" />
+                </div>
+                <div class="form-group col-md-12">
+                  <label for="title" class="ui header m-text-header-thin">标题</label>
+                  <input type="text" class="form-control" id="title" name="title" placeholder="请输入标题"/>
+                </div>
+                <div class="form-group col-md-12">
+                  <label for="description" class="ui header m-text-header-thin">帖子描述</label>
+                  <textarea class="form-control" id="description" name="description" style="height: 80px"
+                            placeholder="请输入描述..."></textarea>
+                </div>
+                <div class="form-group col-md-12">
+                  <label for="content" class="ui header m-text-header-thin">帖子内容</label>
+                  <textarea class="form-control" id="content" name="content" style="height: 120px"
+                            placeholder="请输入内容..."></textarea>
+                </div>
+                <div class="form-group col-md-12">
+                  <label for="tag" class="ui header m-text-header-thin">标签</label>
+                  <div class="form-controls">
+                    <select name="tag.id" class="form-control" id="tag">
+                      <option value="0"></option>
+                      <option value="编程" th:value="${tag.id}" th:each="tag : ${tags}" th:text="${tag.name}">编程
+                      </option>
+                      <!--/*-->
+                      <option value="写作">写作</option>
+                      <option value="答疑">答疑</option>
+                      <option value="冥想">冥想</option>
+                      <option value="升学">升学</option>
+                      <option value="艺术">艺术</option>
+                      <!--*/-->
+                    </select>
                   </div>
-                  <div class="form-group col-md-12">
-                    <label for="description" class="ui header m-text-header-thin">帖子描述</label>
-                    <textarea class="form-control" id="description" name="description" style="height: 80px" placeholder="请输入描述..."></textarea>
+                </div>
+                <div class="form-group col-md-12">
+                  <label for="firstPicture" class="ui header m-text-header-thin">首图</label>
+                  <textarea class="form-control" id="firstPicture" name="firstPicture"
+                            placeholder="首图地址"></textarea>
+                </div>
+                <div class="form-group col-md-12">
+                  <label class="ui header m-text-header-thin">状态</label>
+                  <div class="clearfix">
+                    <label class="radio-inline" for="published">
+                      <input type="radio" id="published" name="published" value="0">
+                      隐私
+                    </label>
+                    <label class="radio-inline" for="_published">
+                      <input type="radio" id="_published" name="published" value="1">
+                      公共
+                    </label>
                   </div>
-                  <div class="form-group col-md-12">
-                    <label for="content" class="ui header m-text-header-thin">帖子内容</label>
-                    <textarea class="form-control" id="content" name="content" style="height: 120px" placeholder="请输入内容..."></textarea>
-                  </div>
-                  <div class="form-group col-md-12">
-                    <label for="tag" class="ui header m-text-header-thin">标签</label>
-                    <div class="form-controls">
-                      <select name="tag.id" class="form-control" id="tag">
-                        <option value="0"></option>
-                        <option value="编程" th:value="${tag.id}" th:each="tag : ${tags}" th:text="${tag.name}">编程</option>
-                        <!--/*-->
-                        <option value="写作">写作</option>
-                        <option value="答疑">答疑</option>
-                        <option value="冥想">冥想</option>
-                        <option value="升学">升学</option>
-                        <option value="艺术">艺术</option>
-                        <!--*/-->
-                      </select>
-                    </div>
-                  </div>
-                  <div class="form-group col-md-12">
-                    <label for="firstPicture" class="ui header m-text-header-thin">首图</label>
-                    <textarea class="form-control" id="firstPicture" name="firstPicture" placeholder="首图地址"></textarea>
-                  </div>
-                  <div class="form-group col-md-12">
-                    <label class="ui header m-text-header-thin">状态</label>
-                    <div class="clearfix">
-                      <label class="radio-inline" for="published">
-                        <input type="radio" id="published" name="published" value="0">
-                        隐私
-                      </label>
-                      <label class="radio-inline" for="_published">
-                        <input type="radio" id="_published" name="published" value="1">
-                        公共
-                      </label>
-                    </div>
-                  </div>
-                  <div class="form-group col-md-12">
-                    <button type="submit" class="ui blue basic button">确 认</button>&nbsp;
-                    <button type="button" class="ui basic button" onclick="javascript:history.back(-1);return false;">返 回</button>
-                  </div>
-                </form>
-       
-              </div>
+                </div>
+                <div class="form-group col-md-12">
+                  <button type="submit" class="ui blue basic button">确 认</button>&nbsp;
+                  <button type="button" class="ui basic button" onclick="javascript:history.back(-1);return false;">返
+                    回
+                  </button>
+                </div>
+              </form>
+
             </div>
           </div>
         </div>
       </div>
+    </div>
     <!--End 页面主要内容-->
   </div>
 </div>
