--- a/src/main/resources/templates/user_blog.html
+++ b/src/main/resources/templates/user_blog.html
@@ -38,7 +38,7 @@
 </nav>
 
 <!--中间内容-->
-<div class="m-container-mm m-padded-tb-big animate__fadeIn" id="waypoint">
+<div class="m-container m-padded-tb-big animate__fadeIn" id="contentDiv">
   <div class="ui container">
     <!--        头部-->
     <div class="ui top attached segment">
@@ -80,9 +80,9 @@
 
         <h2 id="section1">一、关于 <i class="serif">Typo.css</i></h2>
 
-        <pre><code class="language-css">p { color: red }</code></pre>
+        <pre style="background: #363636;"><code class="language-css">p { color: red }</code></pre>
 
-        <pre><code class="language-css">p { color: red }</code></pre>
+        <pre style="background: #363636;"><code class="language-css">p { color: red }</code></pre>
 
         <p><i class="serif">Typo.css</i> 的目的是，在一致化浏览器排版效果的同时，构建最适合中文阅读的网页排版。</p>
         <h4>现状和如何去做：</h4>
@@ -300,7 +300,7 @@
           works nice as the
           demo you're watching now. The following code is the best way to render typo in Chinese:
         </p>
-        <pre>
+        <pre style="background: #363636;">
                     <code class="language-css">
 /* 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化 */
 h1,h2,h3,h4,h5,h6 {
@@ -650,6 +650,7 @@ h5,h6{font-size:1em;}
           </div>
         </div>
       </div>
+      <!--发送评论模块-->
       <div id="comment-form" class="ui form">
         <!--<form action="/dev/comments/save" method="post">-->
         <!--在博客里面加入条隐含域-->
@@ -678,7 +679,10 @@ h5,h6{font-size:1em;}
     <button type="button" class="ui toc blue button">目录</button>
     <a href="#" th:href="@{/feedback}" class="ui blue button">反馈</a>
     <a href="#comment-form" class="ui button"><i class="edit icon"></i></a>
-    <a class="ui icon like-button button"><i class="heart outline icon"></i></a>
+    <a class="ui icon like-button button large Red" onclick="cancelCollection(this)"
+       th:if="${isCollection}"><i class="heart outline icon"></i></a>
+    <a class="ui icon like-button button" onclick="collectionBlog(this)"
+       th:unless="${isCollection}"><i class="heart outline icon"></i></a>
     <a id="toTop-button" class="ui button"><i class="chevron up icon"></i></a>
   </div>
 </div>
@@ -787,9 +791,10 @@ h5,h6{font-size:1em;}
         position: 'bottom center'
     });
 
-    $('.like-button').on('click', function () {
+    /*$('.like-button').on('click', function () {
         $(this).toggleClass('Red');
-    });
+        $(this).toggleClass('large');
+    });*/
 
     tocbot.init({
         // Where to render the table of contents.
@@ -809,6 +814,62 @@ h5,h6{font-size:1em;}
     $('#toTop-button').click(function () {
         $(window).scrollTo(0, 500);
     });
+
+    var clickNum1 = 0;
+    async function collectionBlog(button) {
+        if ([[${blog.user.id}]] == $("[name='concurrentId']").val()) {
+            alert("自己不能收藏自己的帖子");
+            return;
+        }
+
+        if (++clickNum1 == 1) {
+            // 注意：thymeleaf不支持传递对象，只能接收boolean和字符串
+            var collection = {
+                userId: $("[name='concurrentId']").val(),
+                blogId: [[${blog.id}]],
+                time: new Date(),
+                blogTitle: "[[${blog.title}]]", // String类型要包起来
+                resourceId: 0,
+                resourceTitle: "",
+                type: false,
+                blogUserId: [[${blog.user.id}]]
+            }
+            console.log(collection);
+            await fetch('/dev/collection/user_blog', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(collection)
+            }).then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+            }).catch(error => console.error('Error:', error));
+        }
+
+        $(button).toggleClass('Red');
+        $(button).toggleClass('large');
+    }
+
+    var clickNum2 = 0;
+    async function cancelCollection(button) {
+        if (++clickNum2 == 1) {
+            await fetch('/dev/collection/remove/blog/' + [[${blog.id}]], {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            }).then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+            }).catch(error => console.error('Error:', error));
+        }
+
+        $(button).toggleClass('Red');
+        $(button).toggleClass('large');
+    }
 
     function confirmAndDelete(button, str) {
         $('.tiny.modal').modal('show');
@@ -833,6 +894,12 @@ h5,h6{font-size:1em;}
     }
 
     function confirmSubmit(button) {
+        const content = $("[name='content']").val();
+        if (content.trim() == "") {
+            alert("评论内容不能为空哦");
+            return;
+        }
+
         const url = button.dataset.url;
         fetch(url, {
             method: 'POST',
@@ -844,7 +911,7 @@ h5,h6{font-size:1em;}
                 "parentNickname": $("[name='parentNickname']").val(),
                 "parentCommentId": $("[name='parentCommentId']").val(),
                 "hostId": $("[name='hostId']").val(),
-                "content": $("[name='content']").val()
+                "content": content
             })
         }).then(response => {
             // 处理响应
@@ -869,28 +936,6 @@ h5,h6{font-size:1em;}
         $(window).scrollTo($('#comment-form'), 500);
     }
 
-    /*function replySub(obj) {
-        var commentId = $(obj).data('commentid');
-        var commentNickname = $(obj).data('commentnickname');
-        var hostId = $(obj).data('hostid');
-        $("[name='content']").attr("placeholder", "@" + commentNickname).focus();
-        $("[name='parentCommentId']").val(commentId);
-        $("[name='parentNickname']").val(commentNickname);
-        $("[name='hostId']").val(hostId);
-        $("[name='haveGrand']").val(true);
-        $(window).scrollTo($('#comment-form'), 500);
-    }*/
-
-    $('.ui.form').form({
-        fields: {
-            content: {
-                rules: [{
-                    type: 'empty',
-                    prompt: '请输入评论内容'
-                }]
-            },
-        }
-    });
 </script>
 </body>
 </html>
