--- a/src/main/resources/templates/user_resource.html
+++ b/src/main/resources/templates/user_resource.html
@@ -38,7 +38,7 @@
 </nav>
 
 <!--中间内容-->
-<div class="m-container m-margin-top-large animate__fadeIn" id="contentDiv">
+<div class="m-container m-padded-tb-big animate__fadeIn" id="contentDiv">
     <div class="ui container">
         <!--头部-->
         <div class="ui top attached segment">
@@ -64,9 +64,9 @@
 
                 <h2 id="section1">一、关于 <i class="serif">Typo.css</i></h2>
 
-                <pre><code class="language-css">p { color: red }</code></pre>
+                <pre style="background: #363636;"><code class="language-css">p { color: red }</code></pre>
 
-                <pre><code class="language-css">p { color: red }</code></pre>
+                <pre style="background: #363636;"><code class="language-css">p { color: red }</code></pre>
 
                 <p><i class="serif">Typo.css</i> 的目的是，在一致化浏览器排版效果的同时，构建最适合中文阅读的网页排版。</p>
                 <h4>现状和如何去做：</h4>
@@ -284,7 +284,7 @@
                     works nice as the
                     demo you're watching now. The following code is the best way to render typo in Chinese:
                 </p>
-                <pre>
+                <pre style="background: #363636;">
                     <code class="language-css">
 /* 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化 */
 h1,h2,h3,h4,h5,h6 {
@@ -497,7 +497,7 @@ h5,h6{font-size:1em;}
                         <li>初次发表时间：<span
                                 th:text="${#dates.format(resource.createTime, 'yyyy-MM-dd HH:mm')}">2202-06-04 09:21</span></li>
                         <li>最近更新：<span
-                                th:text="${#dates.format(resource.createTime, 'yyyy-MM-dd HH:mm')}">2202-06-04 16:06</span></li>
+                                th:text="${#dates.format(resource.updateTime, 'yyyy-MM-dd HH:mm')}">2202-06-04 16:06</span></li>
                     </ui>
                 </div>
             </div>
@@ -509,7 +509,10 @@ h5,h6{font-size:1em;}
     <div class="ui vertical icon buttons">
         <button type="button" class="ui toc blue button">目录</button>
         <a href="#" th:href="@{/feedback}" class="ui blue button">反馈</a>
-        <a class="ui icon like-button button"><i class="heart outline icon"></i></a>
+        <a class="ui icon like-button button large Red" onclick="cancelCollection(this)"
+           th:if="${isCollection}"><i class="heart outline icon"></i></a>
+        <a class="ui icon like-button button" onclick="collectionBlog(this)"
+           th:unless="${isCollection}"><i class="heart outline icon"></i></a>
         <a href="#" id="toTop-button" class="ui button"><i class="chevron up icon"></i></a>
     </div>
 </div>
@@ -624,22 +627,59 @@ h5,h6{font-size:1em;}
             $(window).scrollTo(0,500);
         });
 
-        $('.like-button').on('click', function() {
-            $(this).toggleClass('Red');
-        });
     });
 
-    var waypoint = new Waypoint({
-        element: document.getElementById('contentDiv'),
-        handler: function(direction) {
-            if (direction == 'down') {
-                $('#toolbar').show(100);
-            } else {
-                $('#toolbar').hide(500);
+    var clickNum1 = 0;
+    async function collectionBlog(button) {
+        if (++clickNum1 == 1) {
+            // 注意：thymeleaf不支持传递对象，只能接收boolean和字符串
+            var collection = {
+                userId: $("[name='concurrentId']").val(),
+                blogId: 0,
+                time: new Date(),
+                blogTitle: "", // String类型要包起来
+                resourceId: [[${resource.id}]],
+                resourceTitle: "[[${resource.title}]]",
+                type: true,
+                blogUserId: 0
             }
-            console.log('Scrolled to waypoint!  ' + direction);
+            console.log(collection);
+            await fetch('/dev/collection/user_resource', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(collection)
+            }).then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+            }).catch(error => console.error('Error:', error));
         }
-    })
+
+        $(button).toggleClass('Red');
+        $(button).toggleClass('large');
+    }
+
+    var clickNum2 = 0;
+    async function cancelCollection(button) {
+        if (++clickNum2 == 1) {
+            await fetch('/dev/collection/remove/resource/' + [[${resource.id}]], {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            }).then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+            }).catch(error => console.error('Error:', error));
+        }
+
+        $(button).toggleClass('Red');
+        $(button).toggleClass('large');
+    }
+
 </script>
 </body>
 </html>
